--- a/app.ipynb
+++ b/app.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "True"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,26 +94,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValidationError",
-     "evalue": "1 validation error for StdioServerParameters\nenv.BRAVE_API_KEY\n  Input should be a valid string [type=string_type, input_value=None, input_type=NoneType]\n    For further information visit https://errors.pydantic.dev/2.11/v/string_type",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValidationError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[37]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmcp_params\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m trader_mcp_server_params, researcher_mcp_server_params\n\u001b[32m      3\u001b[39m trader_mcp_servers = [MCPServerStdio(params) \u001b[38;5;28;01mfor\u001b[39;00m params \u001b[38;5;129;01min\u001b[39;00m trader_mcp_server_params]\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m researcher_mcp_servers = [\u001b[43mMCPServerStdio\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m params \u001b[38;5;129;01min\u001b[39;00m researcher_mcp_server_params(\u001b[33m\"\u001b[39m\u001b[33mamar\u001b[39m\u001b[33m\"\u001b[39m)]\n\u001b[32m      5\u001b[39m mcp_servers = trader_mcp_servers + researcher_mcp_servers\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/genai-projects/autonomous_traders_mcp/venv/lib/python3.12/site-packages/agents/mcp/server.py:227\u001b[39m, in \u001b[36mMCPServerStdio.__init__\u001b[39m\u001b[34m(self, params, cache_tools_list, name, client_session_timeout_seconds)\u001b[39m\n\u001b[32m    208\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Create a new MCP server based on the stdio transport.\u001b[39;00m\n\u001b[32m    209\u001b[39m \n\u001b[32m    210\u001b[39m \u001b[33;03mArgs:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    223\u001b[39m \u001b[33;03m    client_session_timeout_seconds: the read timeout passed to the MCP ClientSession.\u001b[39;00m\n\u001b[32m    224\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    225\u001b[39m \u001b[38;5;28msuper\u001b[39m().\u001b[34m__init__\u001b[39m(cache_tools_list, client_session_timeout_seconds)\n\u001b[32m--> \u001b[39m\u001b[32m227\u001b[39m \u001b[38;5;28mself\u001b[39m.params = \u001b[43mStdioServerParameters\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    228\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m=\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcommand\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    229\u001b[39m \u001b[43m    \u001b[49m\u001b[43margs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43margs\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    230\u001b[39m \u001b[43m    \u001b[49m\u001b[43menv\u001b[49m\u001b[43m=\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43menv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    231\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcwd\u001b[49m\u001b[43m=\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcwd\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    232\u001b[39m \u001b[43m    \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mencoding\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mutf-8\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    233\u001b[39m \u001b[43m    \u001b[49m\u001b[43mencoding_error_handler\u001b[49m\u001b[43m=\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mencoding_error_handler\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mstrict\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    234\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    236\u001b[39m \u001b[38;5;28mself\u001b[39m._name = name \u001b[38;5;129;01mor\u001b[39;00m \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mstdio: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.params.command\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/genai-projects/autonomous_traders_mcp/venv/lib/python3.12/site-packages/pydantic/main.py:253\u001b[39m, in \u001b[36mBaseModel.__init__\u001b[39m\u001b[34m(self, **data)\u001b[39m\n\u001b[32m    251\u001b[39m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[32m    252\u001b[39m __tracebackhide__ = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m253\u001b[39m validated_self = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    254\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m validated_self:\n\u001b[32m    255\u001b[39m     warnings.warn(\n\u001b[32m    256\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mA custom validator is returning a value other than `self`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m\n\u001b[32m    257\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mReturning anything other than `self` from a top level model validator isn\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt supported when validating via `__init__`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    258\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mSee the `model_validator` docs (https://docs.pydantic.dev/latest/concepts/validators/#model-validators) for more details.\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    259\u001b[39m         stacklevel=\u001b[32m2\u001b[39m,\n\u001b[32m    260\u001b[39m     )\n",
-      "\u001b[31mValidationError\u001b[39m: 1 validation error for StdioServerParameters\nenv.BRAVE_API_KEY\n  Input should be a valid string [type=string_type, input_value=None, input_type=NoneType]\n    For further information visit https://errors.pydantic.dev/2.11/v/string_type"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from mcp_params import trader_mcp_server_params, researcher_mcp_server_params\n",
     "\n",
+    "from market import is_paid_polygon, is_realtime_polygon\n",
+    "\n",
+    "load_dotenv(override=True)\n",
+    "\n",
+    "brave_env = {\"BRAVE_API_KEY\": os.getenv(\"BRAVE_API_KEY\")}\n",
+    "polygon_api_key = os.getenv(\"POLYGON_API_KEY\")\n",
+    "\n",
+    "# The MCP server for the Trader to read Market Data\n",
+    "\n",
+    "if is_paid_polygon or is_realtime_polygon:\n",
+    "    market_mcp = {\"command\": \"uvx\",\"args\": [\"--from\", \"git+https://github.com/polygon-io/mcp_polygon@master\", \"mcp_polygon\"], \"env\": {\"POLYGON_API_KEY\": polygon_api_key}}\n",
+    "else:\n",
+    "    market_mcp = ({\"command\": \"uv\", \"args\": [\"run\", \"market_server.py\"]})\n",
+    "\n",
+    "\n",
+    "# The full set of MCP servers for the trader: Accounts, Push Notification and the Market\n",
+    "\n",
+    "trader_mcp_server_params = [\n",
+    "    {\"command\": \"uv\", \"args\": [\"run\", \"accounts_server.py\"]},\n",
+    "    {\"command\": \"uv\", \"args\": [\"run\", \"push_server.py\"]},\n",
+    "    market_mcp\n",
+    "]\n",
+    "\n",
+    "def researcher_mcp_server_params(name: str):\n",
+    "    return [\n",
+    "        {\"command\": \"uvx\", \"args\": [\"mcp-server-fetch\"]},\n",
+    "        {\"command\": \"npx\", \"args\": [\"-y\", \"@modelcontextprotocol/server-brave-search\"], \"env\": {\"BRAVE_API_KEY\": os.getenv(\"BRAVE_API_KEY\")}},\n",
+    "        {\"command\": \"npx\", \"args\": [\"-y\", \"mcp-memory-libsql\"], \"env\": {\"LIBSQL_URL\": f\"file:{name}.db\"}}\n",
+    "    ]\n",
     "trader_mcp_servers = [MCPServerStdio(params) for params in trader_mcp_server_params]\n",
     "researcher_mcp_servers = [MCPServerStdio(params) for params in researcher_mcp_server_params(\"amar\")]\n",
     "mcp_servers = trader_mcp_servers + researcher_mcp_servers"
@@ -130,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,15 +162,9 @@
     "        model=\"gpt-4o-mini\",\n",
     "        mcp_servers=mcp_servers,\n",
     "    )\n",
-    "    return researcher"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return researcher\n",
+    "\n",
+    "\n",
     "async def get_researcher_tool(mcp_servers) -> Tool:\n",
     "    researcher = await get_researcher(mcp_servers)\n",
     "    return researcher.as_tool(\n",
@@ -170,30 +178,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'connect'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m research_question = \u001b[33m\"\u001b[39m\u001b[33mWhat\u001b[39m\u001b[33m'\u001b[39m\u001b[33ms the latest news on Amazon?\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m server \u001b[38;5;129;01min\u001b[39;00m researcher_mcp_servers:\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[38;5;28;01mawait\u001b[39;00m \u001b[43mserver\u001b[49m\u001b[43m.\u001b[49m\u001b[43mconnect\u001b[49m()\n\u001b[32m      5\u001b[39m researcher = \u001b[38;5;28;01mawait\u001b[39;00m get_researcher(researcher_mcp_servers)\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m trace(\u001b[33m\"\u001b[39m\u001b[33mResearcher\u001b[39m\u001b[33m\"\u001b[39m):\n",
-      "\u001b[31mAttributeError\u001b[39m: 'dict' object has no attribute 'connect'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "research_question = \"What's the latest news on Amazon?\"\n",
+    "# research_question = \"What's the latest news on Amazon?\"\n",
     "\n",
-    "for server in researcher_mcp_servers:\n",
-    "    await server.connect()\n",
-    "researcher = await get_researcher(researcher_mcp_servers)\n",
-    "with trace(\"Researcher\"):\n",
-    "    result = await Runner.run(researcher, research_question)\n",
-    "display(Markdown(result.final_output))\n",
+    "# for server in researcher_mcp_servers:\n",
+    "#     await server.connect()\n",
+    "# researcher = await get_researcher(researcher_mcp_servers)\n",
+    "# with trace(\"Researcher\"):\n",
+    "#     print(\"Researcher is ready.\", researcher)\n",
+    "#     result = await Runner.run(researcher, research_question)\n",
+    "# display(Markdown(result.final_output))\n",
     "\n"
    ]
   },
@@ -210,10 +207,58 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading account resource for Amar\n",
+      "params command='uv' args=['run', 'accounts_server.py'] env=None cwd=None encoding='utf-8' encoding_error_handler='strict'\n",
+      "streams (MemoryObjectReceiveStream(_state=MemoryObjectStreamState(max_buffer_size=0, buffer=deque([]), open_send_channels=1, open_receive_channels=1, waiting_receivers=OrderedDict(), waiting_senders=OrderedDict()), _closed=False), MemoryObjectSendStream(_state=MemoryObjectStreamState(max_buffer_size=0, buffer=deque([]), open_send_channels=1, open_receive_channels=1, waiting_receivers=OrderedDict(), waiting_senders=OrderedDict()), _closed=False))\n",
+      "Session created <mcp.client.session.ClientSession object at 0x108afb170>\n",
+      "Session initialized\n"
+     ]
+    }
+   ],
    "source": [
     "amar_initial_strategy = \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\"\n",
     "Account.get(\"Amar\").reset(amar_initial_strategy)\n",
+    "from mcp.client.stdio import stdio_client\n",
+    "import mcp\n",
+    "from mcp import StdioServerParameters\n",
+    "\n",
+    "params = StdioServerParameters(command=\"uv\", args=[\"run\", \"accounts_server.py\"], env=None)\n",
+    "\n",
+    "async def read_accounts_resource(name):\n",
+    "    \"\"\"Read account information for the given name.\n",
+    "    \n",
+    "    Args:\n",
+    "        name: The name of the account holder\n",
+    "        \n",
+    "    Returns:\n",
+    "        Account report as a string\n",
+    "    \"\"\"\n",
+    "    print(f\"Reading account resource for {name}\")\n",
+    "    async with stdio_client(params) as streams:\n",
+    "        print(\"params\" , params)\n",
+    "        print(\"streams\", streams)\n",
+    "        async with mcp.ClientSession(*streams) as session:\n",
+    "            print(\"Session created\", session)    \n",
+    "            print(\"Session initialized\")\n",
+    "            result = await session.read_resource(f\"accounts://accounts_server/{name}\")\n",
+    "            print(\"result\", result)\n",
+    "            return result.contents[0].text\n",
+    "    \n",
+    "\n",
+    "display(Markdown(await read_accounts_resource(\"Amar\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "display(Markdown(await read_accounts_resource(\"Amar\")))\n",
     "display(Markdown(await read_strategy_resource(\"Amar\")))"
@@ -312,7 +357,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -326,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
